Refactored/minor improvements.